Improve projects layout: fix subtitle wrapping, move dates to top-right, fix CalmCompass date, add Show Less button

--- a/src/static/css/components/_mini-post.scss
+++ b/src/static/css/components/_mini-post.scss
@@ -48,32 +48,41 @@
   }
 
   header {
-    @include padding(1.25em, 1.25em, (0, 3em, 0, 0));
+    @include padding(1.25em, 1.25em, 0.75em, 1.25em);
     position: relative;
     @include vendor("flex-grow", "1");
 
-    h3 {
-      font-size: 0.75em;
+    .header-top {
+      @include vendor("display", "flex");
+      @include vendor("justify-content", "space-between");
+      @include vendor("align-items", "flex-start");
       margin-bottom: 0.5em;
+
+      h3 {
+        font-size: 0.75em;
+        margin: 0;
+        @include vendor("flex-grow", "1");
+      }
+
+      .published {
+        font-family: _font(family-heading);
+        font-size: 0.65em;
+        font-weight: _font(weight-heading);
+        letter-spacing: _font(kerning-heading);
+        text-transform: uppercase;
+        color: _palette(fg-light);
+        white-space: nowrap;
+        margin-left: 1em;
+        margin-top: 0.1em;
+      }
     }
     
     .subtitle {
       font-size: 0.65em;
       color: _palette(fg-light);
       font-style: italic;
-      margin-bottom: 0.5em;
+      margin-bottom: 0;
       font-weight: normal;
-    }
-
-    .published {
-      display: block;
-      font-family: _font(family-heading);
-      font-size: 0.6em;
-      font-weight: _font(weight-heading);
-      letter-spacing: _font(kerning-heading);
-      margin: 0.5em 0 0 0;
-      text-transform: uppercase;
-      color: _palette(fg-light);
     }
 
     .author {
